spike shooting implemented

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,4 @@
 	up to heal.  actually that makes no sense. shut up.
 - SHOOT SPIKES.  weapon.  heck yeah.  but...what benefit?  should it automatically eat?
 		Maybe only for self defense.
+		add feeler detection?
