--- a/TODO.txt
+++ b/TODO.txt
@@ -14,4 +14,5 @@
     make it more like emergent behavior
     - actually, should go on a spree to generalize more of the program functions;
       it's a bit too arbitrary right now.  hm...actually most of them aren't.
-- "if" condition: movement angle
+- create environment to actually test out everything is working properly, especially
+    movement_angle
