fixed drag algorithm; un-hardcoding values

--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,5 @@
 - possible conservation of energy mechanism?
 - make more parameters attempt to find the "medium" instead of the maximum...give maximums
     drawbacks as well as advantages (ie, mass = less efficient)
+- kamikaze spikes? eliminate?
+- allow "sticking"/hooking?
