Added UI ability to 'step up' ancestor tracked

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,3 +21,5 @@
     drawbacks as well as advantages (ie, mass = less efficient)
 - kamikaze spikes? eliminate?
 - allow "sticking"/hooking?
+- experiment with solid walls
+- advanced tracking (highlight all common descendants...)
