--- a/TODO.txt
+++ b/TODO.txt
@@ -28,3 +28,4 @@
 - spikes shooting in the wrong direction
 - picking up food with 0 energy?
 - collision angle if condition
+- non-logged "reporting" method
