--- a/TODO.txt
+++ b/TODO.txt
@@ -27,4 +27,4 @@
     rather, one needs only to randomly drift before one can get enough to reproduce.  oh well
 - spikes shooting in the wrong direction
 - picking up food with 0 energy?
-- collision angle if condition
+- work out angle comparism trickeries
