--- a/TODO.txt
+++ b/TODO.txt
@@ -17,8 +17,6 @@
 - create environment to actually test out everything is working properly, especially
     movement_angle
 - possible conservation of energy mechanism?
-- make more parameters attempt to find the "medium" instead of the maximum...give maximums
-    drawbacks as well as advantages (ie, mass = less efficient)
 - kamikaze spikes? eliminate?
 - allow "sticking"/hooking?
 - experiment with solid walls
@@ -28,3 +26,4 @@
 - spikes shooting in the wrong direction
 - picking up food with 0 energy?
 - work out angle comparism trickeries
+- save states
